tests/sources/invalid/borrow/borrow_move_errors.fire
// Borrowed value move errors

import @firescript/std.io.println;

fn takeOwned(s: string) -> void {
    println(s);
}

fn illegalAssign(&s: string) -> string {
    copy: string = s; // Error: cannot move borrowed value into owned binding  //~ ERROR FS-SEM-0001 @20
    return copy;
}

fn illegalPass(&s: string) -> void {
    takeOwned(s); // Error: cannot move borrowed value into owned parameter  //~ ERROR FS-SEM-0001 @15
}

source: string = "borrowed";
println(illegalAssign(source));
illegalPass(source);
